k8s/talos/apps/open-webui/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: open-webui
  annotations:
    volsync.backube/privileged-movers: "true"
