k8s/talos/apps/open-webui/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: open-webui
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway-private
      namespace: traefik
  hostnames:
    - open-webui.local.bigd.no
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: open-webui-service
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
