k8s/talos/apps/open-webui/ciliumnetworkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: open-webui-policy
  namespace: open-webui
spec:
  endpointSelector:
    matchLabels:
      app: open-webui
  ingress:
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": traefik
            "k8s:app.kubernetes.io/instance": traefik-traefik
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": keda
            "k8s:app.kubernetes.io/component": interceptor
            "k8s:app.kubernetes.io/part-of": keda-add-ons-http
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
    - fromEntities:
        - host
        - health
